# causal-conv1d-mojo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  kgen.trace.json.time-trace  main.py  modular_bug_repro.mojo  perf_log.md  pyproject.toml  run_test_mi300.slurm  torch_dispatch_extracted_metallib.py  torch_mps_baseline.py
.github/workflows/: ci.yml  publish.yml
benchmark_compilation/: Dockerfile  benchmark_cold_start.sh  get_diff_loading_and_non_loading.sh  get_timings.sh  simple_forward.py  simple_forward_cpu.py
benchmarks/: _baseline.py  _bwd_gpu_kernel_time.py  _bwd_ncu_run.py  bench.py  bench_backward.py  bench_backward_extensive.py  bench_causal_conv1d.py  bench_compile_time.py  bench_cpu.py  bench_forward_extensive.py  bench_gpu_kernel_time.py  bench_metal_gpu.py  bench_native.py  bench_python_overhead.py  bench_small_fwd.py  bench_vs_pytorch.py  plot_bench.py
benchmarks/baselines/: plot_bench.json
compat/: README.md  pyproject.toml
compat/src/causal_conv1d/: __init__.py
compat/src/flash_attn/: __init__.py
reference_assembly/nvidia/: fwd.sass
scripts/: _apple_gpu_clock_lock.py  _asm_tools.py  _baseline.py  _bench.py  asm_tools.py  bench.py  master_bench.py  master_bench_nvidia.py  plot_bench.py  strip_publish_deps.py  xctrace_bench.sh  xctrace_gpu_intervals.py
scripts/assembly/nvidia/: fwd.sass  fwd__fp16_w4_hb1_hs0_hi0_silu1_contig1_aligned1_vec1_extstr1.ptx
scripts/reference_assembly/nvidia/: fwd.ptx
scripts/tools/: README.md  bench  dump_isa  dump_upstream_isa  gpu_run  hint  quick_test  rocprof_kernels  rocprof_pmc
scripts/tools/check_wheel/: Dockerfile  check_cuda.py  run.sh
src/causal_conv1d_mojo/: __init__.py  _cli.py  _ctx.mojo  _fn.py  _jax_bridge.py  _jit_common.py  _mps.py  _silu.mojo  _update.py  causal_conv1d_varlen.py  reference.py
src/causal_conv1d_mojo/_native/: causal_conv1d_bwd.mojo  causal_conv1d_bwd_cpu.mojo  causal_conv1d_common.mojo  causal_conv1d_cpu.mojo  causal_conv1d_fwd.mojo  causal_conv1d_fwd_cpu.mojo  causal_conv1d_native.mojo  causal_conv1d_update.mojo  causal_conv1d_update_cpu.mojo
src/causal_conv1d_mojo/bwd_full/: __init__.py  _jit.py  common.mojo  dispatch.mojo  kernel.mojo  launch.mojo  variant.mojo
src/causal_conv1d_mojo/bwd_full_cpu/: __init__.py  _jit.py  common.mojo  dispatch.mojo  kernel.mojo  variant.mojo
src/causal_conv1d_mojo/fwd/: __init__.py  _jit.py  common.mojo  dispatch.mojo  kernel.mojo  launch.mojo  variant.mojo
src/causal_conv1d_mojo/fwd_cpu/: __init__.py  _jit.py  common.mojo  dispatch.mojo  kernel.mojo  variant.mojo
src/causal_conv1d_mojo/kernels/: causal_conv1d.mojo
src/causal_conv1d_mojo/update/: __init__.py  _jit.py  common.mojo  dispatch.mojo  kernel.mojo  launch.mojo  variant.mojo
src/causal_conv1d_mojo/update_cpu/: __init__.py  _jit.py  common.mojo  dispatch.mojo  kernel.mojo  variant.mojo
src/flash_attn_mojo/: __init__.py  _dtype.py  _fn.py  _jit_common.py  _mps.py  bert_padding.py  reference.py
src/flash_attn_mojo/_native/: VENDORED.md  flash_attn_native.mojo  flash_bwd_cpu.mojo  flash_fwd_cpu.mojo  flash_fwd_gpu.mojo
src/flash_attn_mojo/bwd/: __init__.py
src/flash_attn_mojo/fwd/: __init__.py  _jit.py  common.mojo  kernel.mojo  launch.mojo  variant.mojo
tests/: _helpers.py  _reference.py  conftest.py  test_basic.py  test_bwd.py  test_causal_conv1d_fn.py  test_cuda_graph.py  test_flash_attn.py  test_fwd.py  test_imports.py  test_jax.py  test_native.py  test_noncontig_layouts.py  test_update.py  test_use_cache_only.py  test_varlen.py
tools/: README.md  bench  dump_isa  dump_upstream_isa  gpu_run  hint  quick_test  rocprof_kernels  rocprof_pmc
tools/check_wheel/: Dockerfile  run.sh
