[project]
name = "causal-conv1d-mojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Pinned to 3.13: torch 2.8.0 ships prebuilt cp313 wheels but not cp314.
# Bump once those land.
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch==2.8.0",
    "mojo-compiler==1.0.0b1",
    "mojo-compiler-mojo-libs==1.0.0b1",
    "numpy>=2.4.4",
    #"pytorch-triton-rocm; sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "ruff",
    "pre-commit",
    # Linux-only dev deps (NVIDIA ptxas + the upstream Tri Dao reference
    # impl, which is built from source against the local torch). On
    # Apple Silicon / macOS arm64 the Mojo GPU code paths run on Metal
    # via `torch.mps` — see `src/causal_conv1d_mojo/_mps.py`.
    "nvidia-cuda-nvcc-cu12==12.8.*; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.2.post1/causal_conv1d-1.6.2.post1+cu12torch2.8cxx11abiTRUE-cp313-cp313-linux_x86_64.whl; sys_platform == 'linux'",
    "wheel",
    "packaging",
    "setuptools>=70",
]

# ---------------------------------------------------------

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]


# ---------------------------------------------------------

# [[tool.uv.index]]
# name = "pytorch-rocm"
# url = "https://download.pytorch.org/whl/rocm6.4"
# explicit = true
# 
# [tool.uv.sources]
# torch = [
#   { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
# ]
# # ROCm support relies on both Triton packages, which should also be installed from
# # the PyTorch index (and included in `project.dependencies`).
# pytorch-triton-rocm = [
#   { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
# ]
# triton-rocm = [
#   { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
# ]

# ---------------------------------------------------------

[tool.uv]
# `uv sync` installs `dev` by default; users who want bench wheels run
# `uv sync --extra bench`.
default-groups = ["dev"]
# causal-conv1d's setup.py imports torch at build time to detect CUDA vs
# HIP, so it needs the env's torch — not a fresh PEP-517 build env.
no-build-isolation-package = ["causal-conv1d"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"causal_conv1d_mojo" = ["**/*.mojo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# E741: "ambiguous variable name `l`" — `l` is conventional for seqlen
# in ML code (matches upstream causal_conv1d). Same for `B`, `D`, etc.
ignore = ["E741"]
