[project]
name = "causal-conv1d-mojo"
version = "0.0.2"
description = "A wheel for causal-conv1d that works everywhere."
readme = "README.md"
# Pinned to 3.13: torch 2.8.0 ships prebuilt cp313 wheels but not cp314.
# Bump once those land.
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch",
    "mojo-compiler==1.0.0b1",
    "mojo-compiler-mojo-libs==1.0.0b1",
]

[project.optional-dependencies]
nvidia = [
    "torch==2.8.0 ; sys_platform == 'linux'",
    "nvidia-cuda-nvcc-cu12==12.8.* ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.2.post1/causal_conv1d-1.6.2.post1+cu12torch2.8cxx11abiTRUE-cp313-cp313-linux_x86_64.whl ; sys_platform == 'linux'",
]
rocm = [
    "torch==2.8.0 ; sys_platform == 'linux'",
    "pytorch-triton-rocm ; sys_platform == 'linux'",
    "causal-conv1d ; sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "ruff",
    "pre-commit",
    "wheel",
    "packaging",
    "setuptools>=70",
    "numpy>=2.0.0",
]

[tool.uv]
default-groups = ["dev"]

# nvidia and rocm both want to source torch from a different PyTorch
# index, so they cannot be resolved together — declare them as a
# conflicting extras pair.
conflicts = [
    [
        { extra = "nvidia" },
        { extra = "rocm" },
    ],
]
# causal-conv1d's setup.py imports torch at build time to detect CUDA vs
# HIP, so it needs the env's torch — not a fresh PEP-517 build env.
no-build-isolation-package = ["causal-conv1d"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "nvidia" },
    { index = "pytorch-rocm", extra = "rocm" },
]
# ROCm Triton ships on the same index as the ROCm torch wheels.
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"causal_conv1d_mojo" = ["**/*.mojo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# E741: "ambiguous variable name `l`" — `l` is conventional for seqlen
# in ML code (matches upstream causal_conv1d). Same for `B`, `D`, etc.
ignore = ["E741"]
